--- a/CarRental/RentACar/Views/Hesap/Hukumvekosullar.cshtml
+++ b/CarRental/RentACar/Views/Hesap/Hukumvekosullar.cshtml
@@ -1,5 +1,4 @@
-﻿<p>
-    1. TARAFLAR
+﻿1. TARAFLAR
 
 İşbu Üyelik Sözleşmesi (bundan sonra “Sözleşme” olarak anılacaktır.) BLU TV İLETİŞİM VE DİJİTAL YAYIN HİZMETLERİ A.Ş. (Mersis No: 0178077020800011), (bundan sonra “BluTV” olarak anılacaktır) ile www.blutv.com adresinden ve/veya mobil cihaz, akıllı televizyon ve benzeri cihazlar üzerinde yer alan BluTV uygulamalarından BluTV’nin sunduğu ücretli ve/veya ücretsiz video, müzik, canlı TV yayını, oyun ve benzeri içerik hizmetlerinden (bundan sonra “Dijital İçerik” olarak anılacaktır) faydalanmak için işbu Sözleşmeyi onaylamak isteyen tüketici (bundan sonra “ALICI” olarak anılacaktır) arasında ALICI’nın elektronik ortamda bulunan “Üyelik Sözleşmesini Kabul Ediyorum” butonunu tıklaması ve kabul beyanının BLU TV kayıtlarına geçtiği an kurulmuş ve yürürlüğe girmiştir.
 
@@ -96,4 +95,3 @@ ALICI, tek taraflı olarak üyeliğini sonlandırdığında, işbu Sözleşme ka
 12. YÜRÜRLÜK
 
 İşbu Sözleşme, ALICI tarafından okunarak, kabul edildiği anda yürürlüğe girecek ve Taraflardan herhangi biri tarafından feshedilinceye kadar yürürlükte kalacaktır.
-</p>
