--- a/CarRental/RentACar/Views/Hesap/Kayit.cshtml
+++ b/CarRental/RentACar/Views/Hesap/Kayit.cshtml
@@ -1,6 +1,5 @@
-﻿@{
-	Layout=null;
-}
+﻿@model RentACar.Models.User
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -33,8 +32,11 @@
                     <div class="col-sm-12">
 
                         <div class="wrapper-page">
-
                             <div class="m-t-40 card-box">
+                                        @using (Html.BeginForm("Giris", "Hesap"))
+                        {
+                            <button class="btn btn-dark">GERİ</button>
+                        }
                                 <div class="text-center">
                                     <h2 class="text-uppercase m-t-0 m-b-30">
                                         <a href="index.html" class="text-success">
@@ -44,45 +46,56 @@
                                     <!--<h4 class="text-uppercase font-bold m-b-0">Sign In</h4>-->
                                 </div>
                                 <div class="account-content">
-                                    <form  method="post" asp-controller="Hesap" asp-action="Kayit" class="form-horizontal">
-
-                                        <div class="form-group m-b-20">
+                                    <form asp-controller="Hesap" asp-action="Kayit" method="post" class="form-horizontal">
+                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                         <div class="form-group m-b-20">
                                             <div class="col-12">
-                                                <label for="FullName">İsim ve Varsa İkinci İsim</label>
-                                                <input class="form-control" type="text"  id="FullName" name="FullName" required="" placeholder="Ali">
+                                                <label for="FullName">İsim</label>
+                                                <input class="form-control" type="text"  id="FullName" name="FullName"  placeholder="Ali" value="@Model.FullName">
+                                                <span asp-validation-for="@Model.FullName" class="text-danger"></span>
                                             </div>
+
                                         </div>
                                          <div class="form-group m-b-20">
                                             <div class="col-12">
                                                 <label for="Surname">Soyisim</label>
-                                                <input class="form-control" name="Surname" type="text" required="" id="Surname" placeholder="Veli">
+                                                <input class="form-control" name="Surname" type="text" id="Surname" placeholder="Veli" value="@Model.Surname">
+                                                <span asp-validation-for="@Model.Surname" class="text-danger"></span>
                                             </div>
                                         </div>
 
                                         <div class="form-group m-b-20">
                                             <div class="col-12">
-                                                <label for="Emaill">E-posta Adresi</label>
-                                                <input class="form-control" type="email" name="Emaill" id="Emaill" required="" placeholder="ali@hotmail.com">
+                                                <label for="Email">E-posta Adresi</label>
+                                                <input class="form-control" type="email" name="Email" id="Email"  placeholder="ali@hotmail.com" value="@Model.Email">
+                                                <span asp-validation-for="@Model.Email" class="text-danger"></span>
+
                                             </div>
                                         </div>
 
                                         <div class="form-group m-b-20">
                                             <div class="col-12">
-                                                <label for="Passwordd">Şifre</label>
-                                                <input class="form-control" name="Passwordd" type="password" required="" id="Passwordd" placeholder="Şifre">
+                                                <label for="Password">Şifre</label>
+                                                <input class="form-control" name="Password" type="password"  id="Password" placeholder="Şifre">
+                                                <span asp-validation-for="@Model.Password" class="text-danger"></span>
+
                                             </div>
                                         </div>
                                         <div class="form-group m-b-20">
                                             <div class="col-12">
-                                                <label for="PasswordRepeatt">Şifre Tekrarı</label>
-                                                <input class="form-control" name="PasswordRepeatt" type="password" required="" id="PasswordRepeatt" placeholder="Şifre">
+                                                <label for="PasswordRepeat">Şifre Tekrarı</label>
+                                                <input class="form-control" name="PasswordRepeat" type="password"  id="PasswordRepeat" placeholder="Şifre">
+                                                <span asp-validation-for="@Model.PasswordRepeat" class="text-danger"></span>
+
                                             </div>
                                         </div>
 
                                         <div class="form-group m-b-20">
                                             <div class="col-12">
                                                 <label for="MobileNO">Telefon No</label>
-                                                <input class="form-control"  type="text" name="MobileNO" required="" id="MobileNO" placeholder="Telefon No">
+                                                <input class="form-control"  type="text" name="MobileNO"  id="MobileNO" placeholder="Telefon No" value="@Model.MobileNO">
+                                                <span asp-validation-for="@Model.MobileNO" class="text-danger"></span>
+
                                             </div>
                                         </div>
 
@@ -91,7 +104,7 @@
                                                 <div class="checkbox checkbox-primary">
                                                     <input id="checkbox5" type="checkbox">
                                                     <label for="checkbox5">
-                                                       Kabul ediyorum <a href="https://localhost:7080/Hesap/HukumveKosullar" onclick="window.open(this.href, 'mywin','left=20,top=20, width=500, toolbar=1, realizable=0'); return false;">Hüküm ve Koşullar</a>
+                                                        Kabul ediyorum <a href="https://localhost:7293/Hesap/Hukumvekosullar" onclick="window.open(this.href, 'mywin','left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Hüküm ve Koşullar</a>
                                                     </label>
                                                 </div>
                                             </div>
@@ -99,7 +112,7 @@
 
                                         <div class="form-group account-btn text-center m-t-10">
                                             <div class="col-12">
-                                                <button class="btn btn-lg btn-primary btn-block" type="submit">Kaydol</button>
+                                                <button class="btn btn-lg btn-primary btn-block" type="submit">Ücretsiz kaydol</button>
                                             </div>
                                         </div>
 
@@ -114,7 +127,7 @@
 
                             <div class="row m-t-50">
                                 <div class="col-sm-12 text-center">
-                                    <p class="text-muted">Zaten bir hesabın var mı?  <a asp-controller="Hesap" asp-action="Giris" class="text-dark m-l-5">Giriş</a></p>
+                                    <p class="text-muted">Zaten bir hesabınız var mı?  <a href="pages-login.html" class="text-dark m-l-5">Oturum Aç</a></p>
                                 </div>
                             </div>
 
