--- a/CarRental/RentACar/Views/Home/Index.cshtml
+++ b/CarRental/RentACar/Views/Home/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@{
-    Layout = "_Layout";
+﻿
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <h1>
-    <a asp-controller="Hesap" asp-action="Giris">
-        ADMİN GİRİŞİ
-
-    </a>
-</h1>
+    <a asp-controller="Hesap" asp-action="Giris">Admin Girişi</a>
+    </h1>
