--- a/CarRental/RentACar/Views/Shared/_Stylee.cshtml
+++ b/CarRental/RentACar/Views/Shared/_Stylee.cshtml
@@ -1,4 +1,5 @@
-﻿ <link rel="shortcut icon" href="~/adminn/assets/images/favicon.ico">
+﻿  <!-- App favicon -->
+        <link rel="shortcut icon" href="~/adminn/assets/images/favicon.ico">
 
         <!-- App css -->
         <link href="~/adminn/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
