--- a/CarRental/RentACar/Views/Shared/_Leftbarr.cshtml
+++ b/CarRental/RentACar/Views/Shared/_Leftbarr.cshtml
@@ -1,4 +1,4 @@
-﻿ <div class="left side-menu">
+﻿            <div class="left side-menu">
                 <div class="user-details">
                     <div class="pull-left">
                         <img src="~/adminn/assets/images/users/avatar-1.jpg" alt="" class="thumb-md rounded-circle">
@@ -8,7 +8,9 @@
                         <p class="text-muted m-0">Administrator</p>
                     </div>
                 </div>
- <div id="sidebar-menu">
+
+                <!--- Sidemenu -->
+                <div id="sidebar-menu">
                     <!-- Left Menu Start -->
                     <ul class="metismenu" id="side-menu">
                         <li class="menu-title">Navigation</li>
